[tool.poetry]
name = "tweet_collector"
version = "0.1.0"
description = ""
authors = ["phoro3"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^3.8.0"
boto3 = "^1.12.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
